<resources>
    <string name="app_name">Software-Meth-Project-5</string>
    <string name="burger">Burger</string>
    <string name="sandwich">Sandwich</string>
    <string name="beverages">Beverages</string>
    <string name="sides">Sides</string>
    <string name="completedOrders">Completed Orders</string>
    <string name="currentOrder">Current Order</string>
    <string name="bread">Bread</string>
    <string name="Patty">Patty</string>
    <string name="quantity">Quantity</string>
    <string name="addons">Add-ons</string>
    <string name="single">Single</string>
    <string name="doubleString">Double</string>
    <string name="lettuceAddon">Lettuce ($0.30)</string>
    <string name="tomatoAddon">Tomato ($0.30)</string>
    <string name="onionsAddon">Onions ($0.30)</string>
    <string name="avocadoAddon">Avocado ($0.50)</string>
    <string name="cheeseAddon">Cheese ($1.00)</string>
    <string name="brioche">Brioche</string>
    <string name="wheatBread">Wheat Bread</string>
    <string name="pretzel">Pretzel</string>
    <string name="bagel">Bagel</string>
    <string name="sourdough">Sourdough</string>
    <string name="roastBeef">Roast Beef</string>
    <string name="salmon">Salmon</string>
    <string name="chicken">Chicken</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="staringOne">1</string>
    <string name="addToOrder">Add to Order</string>
    <string name="startingPrice">$0.00</string>
    <string name="itemPriceTag">Item Price:</string>
    <string name="protein">Protein</string>
    <string name="flavor">Flavor</string>
    <string name="size">Size</string>
    <string name="beverageSmall">Small ($1.99)</string>
    <string name="beverageMedium">Medium ($2.49)</string>
    <string name="beverageLarge">Large ($2.99)</string>
    <string name="sideSmall">Small</string>
    <string name="sideMedium">Medium (+$0.50)</string>
    <string name="sideLarge">Large (+$1.00)</string>
    <string name="sideChips">Chips</string>
    <string name="sideOnionRings">Onion Rings</string>
    <string name="sideFries">Fries</string>
    <string name="sideAppleSlices">Apple Slices</string>
    <string name="sideType">Side Type</string>
    <string name="subtotal">Subtotal:</string>
    <string name="salesTax">Sales Tax (6.625%):</string>
    <string name="orderTotal">Order Total:</string>
    <string name="orderNumber">Order Number:</string>
    <string name="removeSelectedItem">Remove Selected Item</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="placeOrder">Place Order</string>
    <string name="currentOrderDetails">Current Order Details</string>
    <string name="mainMenu">Main Menu</string>
    <string name="selectedOrderNumber">Select Order Number:</string>
    <string name="burgerCombo">Burger Combo</string>
    <string name="sandwichCombo">Sandwich Combo</string>
    <string name="itemPrice">Item Price:</string>
    <string name="comboPrice">Combo Price:</string>
    <string name="makeItACombo">Make It A Combo</string>
</resources>